--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
             </div>
             <form action="" class="form" id="form">
                 <div class="form-control">
-                    <input type="text" id="fName"placeholder="First Name">
+                    <input type="text" id="fName" aria-label="First Name" placeholder="First Name">
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small></small>
                 </div>
                 <div class="form-control">
-                    <input type="text" id="lName"placeholder="Last Name">
+                    <input type="text" id="lName" aria-label="Last Name" placeholder="Last Name">
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small></small>
                 </div>
                 <div class="form-control">
-                    <input type="email" id="email" placeholder="Email Address">
+                    <input type="email" id="email" aria-label="Email" placeholder="Email Address">
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small></small>
                 </div>
                 <div class="form-control">
-                    <input type="password" id="password" placeholder="Password">
+                    <input type="password" id="password" aria-label="Password" placeholder="Password">
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small></small>
