--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span>Try it free 7 days</span> then $20/mo. thereafter
                 </p>
             </div>
-            <form action="#" class="form" id="form">
+            <form class="form" id="form">
                 <div class="form-control">
                     <input type="text" id="fName" aria-label="First Name" placeholder="First Name">
                     <i class="fas fa-check-circle"></i>
