--- a/index.html
+++ b/index.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-<link rel="stylesheet" href="styles.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-<title>Frontend Mentor | Intro component with sign up form</title>
-
-</head>
-<body>
-
-    <div class="container">
-        <div class="left">
-            <h1>Learn to code by watching others</h1>
-            <p>
-                See how experienced developers solve problems in 
-                real-time. Watching scripted tutorials is great, 
-                but understanding how developers think is invaluable. 
-            </p>
-        </div>
-        <div class="right">
-            <div class="trial">
-                <p>
-                    <span>Try it free 7 days</span> then $20/mo. thereafter
-                </p>
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <title>Frontend Mentor | Intro component with sign up form</title>
+    </head>
+    <body>
+        <div class="main-container">
+            <div class="container">
+                <div class="left">
+                    <h1>Learn to code by watching others</h1>
+                    <p>
+                        See how experienced developers solve problems in 
+                        real-time. Watching scripted tutorials is great, 
+                        but understanding how developers think is invaluable. 
+                    </p>
+                </div>
+                <div class="right">
+                    <div class="trial">
+                        <p>
+                            <span>Try it free 7 days</span> then $20/mo. thereafter
+                        </p>
+                    </div>
+                    <form class="form" id="form">
+                        <div class="form-control">
+                            <input type="text" id="fName" aria-label="First Name" placeholder="First Name">
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
+                            <small></small>
+                        </div>
+                        <div class="form-control">
+                            <input type="text" id="lName" aria-label="Last Name" placeholder="Last Name">
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
+                            <small></small>
+                        </div>
+                        <div class="form-control">
+                            <input type="email" id="email" aria-label="Email" placeholder="Email Address">
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
+                            <small></small>
+                        </div>
+                        <div class="form-control">
+                            <input type="password" id="password" aria-label="Password" placeholder="Password">
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
+                            <small></small>
+                        </div>
+                        <button>Claim your free trial</button>
+                        <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
+                    </form>
+                </div>
             </div>
-            <form class="form" id="form">
-                <div class="form-control">
-                    <input type="text" id="fName" aria-label="First Name" placeholder="First Name">
-                    <i class="fas fa-check-circle"></i>
-                    <i class="fas fa-exclamation-circle"></i>
-                    <small></small>
-                </div>
-                <div class="form-control">
-                    <input type="text" id="lName" aria-label="Last Name" placeholder="Last Name">
-                    <i class="fas fa-check-circle"></i>
-                    <i class="fas fa-exclamation-circle"></i>
-                    <small></small>
-                </div>
-                <div class="form-control">
-                    <input type="email" id="email" aria-label="Email" placeholder="Email Address">
-                    <i class="fas fa-check-circle"></i>
-                    <i class="fas fa-exclamation-circle"></i>
-                    <small></small>
-                </div>
-                <div class="form-control">
-                    <input type="password" id="password" aria-label="Password" placeholder="Password">
-                    <i class="fas fa-check-circle"></i>
-                    <i class="fas fa-exclamation-circle"></i>
-                    <small></small>
-                </div>
-                <button>Claim your free trial</button>
-                <p>By clicking the button, you are agreeing to our <a href="">Terms and Services</a></p>
-            </form>
+            <footer>
+                <p class="attribution">
+                    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+                    Coded by <a href="#">Kiara Rose</a>.
+                </p>
+            </footer>
         </div>
-    </div>
-<footer>
-    <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Kiara Rose</a>.
-    </p>
-</footer>
-
-<script src='form-validation.js'></script>
-</body>
+        
+        <script src='form-validation.js'></script>
+    </body>
 </html>
